--- a/templates/basebs.html
+++ b/templates/basebs.html
@@ -178,11 +178,10 @@
 {% endblock %}
 <div class="container-fluid">
     {% block content %}
-    <!-- Main content goes here -->
     {% endblock %}
 </div>
 
-<!-- Chatbot Button -->
+<!-- Chatbot button -->
 <button type="button" class="chatbot-button" data-bs-toggle="modal" data-bs-target="#chatbotModal">
     <i class="fas fa-comments"></i>
 </button>
