--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -27,6 +27,10 @@
                 <li class="nav-item">
                     <a class="nav-link {% if request.path == '/events' %}active text-warning{% else %}text-light{% endif %}" href="/events">EVENTS</a>
                 </li>
+                <!-- Admin -->
+                <li class="nav-item">
+                    <a class="dropdown-item" href="/admin">Admin</a>
+                </li>
             </ul>
 
             <div class="text-light">
