--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -29,7 +29,7 @@
                 </li>
                 <!-- Admin -->
                 <li class="nav-item">
-                    <a class="dropdown-item" href="/admin">Admin</a>
+                    <a class="nav-link {% if request.path == '/events' %}active text-warning{% else %}text-light{% endif %}" href="/admin">ADMIN</a>
                 </li>
             </ul>
 
