working log out button

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -15,6 +15,7 @@ Enquiries
         <tr>
             <th>Username</th>
             <th>Email</th>
+            <th>Password</th>
         </tr>
         {% for username, info in users.items() %}
         <tr>
