--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -20,7 +20,12 @@
 
                 <!-- Enquiries -->
                 <li class="nav-item">
-                    <a class="nav-link {% if request.path == '/enquiries' %}active text-warning{% else %}text-light{% endif %}" href="/enquiries">ENQUIRIES</a>
+                    <a class="nav-link {% if request.path == '/contact' %}active text-warning{% else %}text-light{% endif %}" href="/contact">CONTACT FORM</a>
+                </li>
+
+                <!-- Contact_Admin -->
+                <li class="nav-item">
+                    <a class="nav-link {% if request.path == '/admin/contacts' %}active text-warning{% else %}text-light{% endif %}" href="/admin/contacts">SUBMISSIONS</a>
                 </li>
 
                 <!-- Events -->
