--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,10 +1,3 @@
-{% extends "baselib.html" %}
-
-{% block title %}
-Enquiries
-{% endblock %}
-
-{% block content %}
 <html>
 <head>
     <title>Admin Panel</title>
@@ -16,15 +9,24 @@ Enquiries
             <th>Username</th>
             <th>Email</th>
             <th>Password</th>
+            <th>Actions</th>
         </tr>
         {% for username, info in users.items() %}
         <tr>
             <td>{{ username }}</td>
             <td>{{ info.email }}</td>
             <td>{{ info.password }}</td>
+            <td>
+                <!-- Update Button -->
+                <a href="{{ url_for('update_user', username=username) }}">Edit</a>
+
+                <!-- Delete Button -->
+                <form action="{{ url_for('delete_user', username=username) }}" method="POST" style="display:inline;">
+                    <button type="submit" onclick="return confirm('Are you sure you want to delete {{ username }}?')">Delete</button>
+                </form>
+            </td>
         </tr>
         {% endfor %}
     </table>
 </body>
 </html>
-{% endblock %}
