--- a/templates/book_loan.html
+++ b/templates/book_loan.html
@@ -1,6 +1,6 @@
 {% extends "baselib.html" %}
 
-{% block title %} Bookstore {% endblock %}
+{% block title %}j Bookstore {% endblock %}
 
 {% block content %}
 <div class="container">
