--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,3 +1,10 @@
+{% extends "baselib.html" %}
+
+{% block title %}
+Enquiries
+{% endblock %}
+
+{% block content %}
 <html>
 <head>
     <title>Admin Panel</title>
@@ -30,3 +37,4 @@
     </table>
 </body>
 </html>
+{% endblock %}
