--- a/templates/admin.html
+++ b/templates/admin.html
@@ -20,12 +20,12 @@ Enquiries
         </tr>
         {% for username, info in users.items() %}
         <tr>
-            <td>{{ username }}</td>
+            <td>{{ info.username }}</td> 
             <td>{{ info.email }}</td>
             <td>{{ info.password }}</td>
             <td>
                 <!-- Update Button -->
-                <a href="{{ url_for('update_user', username=username) }}">Edit</a>
+                <a href="{{ url_for('update_user', username=username) }}">Update</a>
 
                 <!-- Delete Button -->
                 <form action="{{ url_for('delete_user', username=username) }}" method="POST" style="display:inline;">
