--- a/templates/update_user.html
+++ b/templates/update_user.html
@@ -1,3 +1,10 @@
+{% extends "baselib.html" %}
+
+{% block title %}
+Enquiries
+{% endblock %}
+
+{% block content %}
 <html>
 <head>
     <title>Update User</title>
@@ -15,3 +22,4 @@
     </form>
 </body>
 </html>
+{% endblock %}
